--- a/svd.ipynb
+++ b/svd.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ab7d0eb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from numpy import linalg as LA\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import imageio\n",
+    "from PIL import Image\n",
+    "plt.rcParams['image.cmap'] = 'RdBu_r'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "fd5d0b32",
    "metadata": {},
@@ -22,42 +38,27 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from numpy import linalg as LA\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import imageio\n",
-    "from PIL import Image\n",
-    "plt.rcParams['image.cmap'] = 'RdBu_r'\n",
     "def svd(A):\n",
     "    # Compute the eigenvectors and eigenvalues of A.T @ A\n",
-    "    w, V = LA.eig(np.nan_to_num(A.T @ A))\n",
-    "    \n",
+    "    w, V = LA.eig(np.nan_to_num(A.T @ A))  \n",
     "    # Calculate sigma values (singular values)\n",
     "    sigma = np.sqrt(np.abs(w))\n",
     "    # Create the diagonal matrix D using singular values\n",
-    "    D = np.diag(sigma)\n",
-    "    \n",
+    "    D = np.diag(sigma) \n",
     "    # Calculate the U matrix\n",
     "    U = np.zeros(A.shape)\n",
     "    for i in range(len(sigma)):\n",
-    "#         U[:, i] = (1 / sigma[i]) * A @ V[:, i]\n",
     "        if sigma[i] != 0:\n",
     "            U[:, i] = (1 / sigma[i]) * A @ V[:, i]\n",
     "        else:\n",
     "            U[:, i] = 0\n",
-    "\n",
-    "    \n",
     "    return U, D, V.T\n",
     "\n",
     "# Example usage:\n",
-    "A = np.array([ \n",
-    "    [1, 0],\n",
-    "    [1, 0],\n",
-    "    [0, 1]\n",
-    "])\n",
+    "A = np.array([[1, 0],\n",
+    "              [1, 0],\n",
+    "              [0, 1]])\n",
     "U, D, Vt =svd(A)\n",
-    "\n",
     "print(\"SVD:\")\n",
     "print(\"U:\", U)\n",
     "print(\"D:\", D)\n",
@@ -1165,7 +1166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
