--- a/svd.ipynb
+++ b/svd.ipynb
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c243d296",
+   "id": "e28179f0",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2dc9dd8b",
+   "id": "360cd4b1",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "89fbec83",
+   "id": "4866dc57",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "23e2efd3",
+   "id": "4bb0ca9c",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "43e3fb8f",
+   "id": "3f98cd9f",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1b05ce0d",
+   "id": "f9d8e8d8",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "59b8782d",
+   "id": "be83c576",
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "5c321204",
+   "id": "4798268e",
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "ca50ca1d",
+   "id": "75c4c913",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "174b7a37",
+   "id": "ea4bb2d0",
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "61b7f23b",
+   "id": "a4d94337",
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "d12999a0",
+   "id": "71c61bde",
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "3eed40a3",
+   "id": "f84658d0",
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "c849a68c",
+   "id": "02943922",
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "757e4803",
+   "id": "ad092f49",
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "34ea8ce0",
+   "id": "62a63a7b",
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "ef163939",
+   "id": "759f1095",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1674,7 +1674,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "8d0609d4",
+   "id": "842a9359",
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "c0f728dd",
+   "id": "cafcf1e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "801c2d03",
+   "id": "8671f493",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "83fd13e5",
+   "id": "ad6c605b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77695d2c",
+   "id": "69bdaa6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1746,7 +1746,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "6c519f2b",
+   "id": "9fb02c48",
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1767,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "2d91b0c8",
+   "id": "a78ea1de",
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "938399ae",
+   "id": "4b1c4f93",
    "metadata": {},
    "outputs": [
     {
@@ -1809,7 +1809,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "b5be7428",
+   "id": "9d7bebdf",
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1840,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "5805157a",
+   "id": "2f9ae083",
    "metadata": {},
    "outputs": [
     {
@@ -1862,8 +1862,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 192,
+   "id": "cf680a98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 1, 2, 6, 4, 6, 2, 6, 4, 5, 2, 2, 4, 1, 6, 2, 1, 3, 2, 3, 6, 3,\n",
+       "       3, 6, 1, 3, 0, 1, 6, 5, 4, 5, 3, 0, 3, 1, 6, 3, 6, 2, 3, 0, 1, 1,\n",
+       "       3, 6, 3, 3, 3, 3, 5, 6, 4, 3, 3, 0, 1, 3, 6, 4, 3, 3, 6, 6, 0, 3,\n",
+       "       6, 0, 2, 5, 3, 1, 2, 6, 3, 3, 1, 3, 5, 2, 2, 3, 1, 0, 3, 1, 5, 1,\n",
+       "       6, 5, 3, 3, 1, 4, 1, 3, 3, 1, 3, 0, 1, 1, 4, 3, 1, 3, 3, 2, 3, 3,\n",
+       "       3, 3, 5, 1, 3, 2, 6, 2, 3, 3, 3, 4, 5, 1, 6, 3, 3, 3, 1, 4, 1, 3,\n",
+       "       0, 3, 3, 1, 3, 6, 3, 3, 6, 3, 3, 3, 3, 3, 1, 6, 4, 2, 6, 3, 3, 4,\n",
+       "       5, 3, 0, 3, 3, 1, 4, 6, 1, 3, 1, 5, 3, 2, 2, 5, 3, 3, 1, 2, 4, 2,\n",
+       "       0, 1, 3, 4, 3, 3, 3, 3, 3, 3, 6, 1, 3, 0, 0, 5, 3, 5, 6, 0, 3, 2,\n",
+       "       3, 3, 3, 6, 3, 1, 3, 5, 2, 3, 6, 3, 3, 6, 3, 3, 0, 3, 3, 3, 3, 6,\n",
+       "       0, 1, 3, 1, 1, 2, 3, 2, 3, 1, 3, 3, 2, 1, 4, 2, 1, 3, 3, 1, 1, 1,\n",
+       "       5, 5, 2, 5, 3, 3, 3, 3, 6, 3, 5, 2, 3, 3, 4, 3, 3, 3, 0, 0, 3, 0,\n",
+       "       4, 1, 1, 5, 6, 5, 3, 3, 3, 0, 2, 3, 3, 2, 3, 6, 3, 2, 3, 2, 3, 0,\n",
+       "       0, 6, 1, 0, 3, 1, 0, 4, 1, 3, 4, 4, 3, 3, 2, 1, 3, 1, 0, 3, 2, 2,\n",
+       "       3, 2, 1, 4, 3, 2, 1, 3, 0, 3, 3, 6, 3, 3, 3, 3, 1, 1, 1, 3, 2, 0,\n",
+       "       1, 3, 3, 1, 5, 3, 3, 6, 3, 3, 3, 1, 6, 5, 3, 4, 3, 3, 1, 2, 5, 6,\n",
+       "       3, 6, 3, 3, 3, 3, 3, 6, 6, 3, 3, 1, 1, 1, 3, 3, 2, 3, 3, 3, 4, 3,\n",
+       "       3, 3, 3, 3, 3, 1, 2, 3, 2, 3, 3, 2, 5, 1, 5, 4, 6, 1, 3, 1, 3, 1,\n",
+       "       3, 0, 3, 0, 3, 1, 6, 4, 2, 3, 6, 1, 4, 3, 3, 0, 1, 0, 4, 5, 1, 3,\n",
+       "       4, 5, 6, 5, 4, 0, 6, 1, 3, 6, 3, 3, 4, 6, 1, 3, 1, 3, 4, 3, 3, 3,\n",
+       "       5, 2, 2, 4, 2, 3, 2, 1, 6, 4, 1, 2, 3, 4, 5, 3, 3, 6, 3, 4, 1, 5,\n",
+       "       0, 3, 1, 3, 1, 1, 6, 0, 2, 3, 3, 3, 3, 1, 6, 4, 3, 3, 3, 3, 6, 2,\n",
+       "       6, 0, 3, 0, 4, 1, 4, 2, 1, 6, 1, 6, 4, 2, 1, 2, 6, 3, 2, 1, 2, 6,\n",
+       "       3, 3, 3, 2, 4, 2, 4, 3, 6, 3, 3, 3, 1, 1, 3, 4, 3, 3, 1, 3, 3, 4,\n",
+       "       3, 0, 0, 5, 3, 3, 5, 1, 3, 3, 4, 5, 3, 3, 3, 6, 3, 4, 0, 1, 5, 1,\n",
+       "       2, 3, 3, 3, 3, 1, 1, 3, 6, 3, 6, 6, 3, 3, 1, 3, 6, 3, 3, 2, 2, 1,\n",
+       "       2, 2, 0, 0, 0, 3, 6, 6, 3, 5, 3, 1, 3, 2, 4, 1, 2, 6, 2, 1, 3, 6,\n",
+       "       2, 4, 2, 1, 5, 2, 3, 3, 4, 3, 3, 1, 2, 0, 0, 0, 3, 4, 6, 3, 3, 1,\n",
+       "       0, 3, 0, 4, 1, 3, 1, 3, 3, 3, 3, 6, 3, 6, 2, 0, 3, 1, 3, 1, 1, 1,\n",
+       "       1, 3, 3, 1, 3, 3, 3, 4, 3, 6, 1, 3, 3, 0, 3, 6, 5, 3, 0, 4, 3, 2,\n",
+       "       3, 3, 0, 3, 3, 6, 2, 3, 4, 1, 1, 2, 1, 3, 3, 3, 1, 0, 3, 3, 3, 3,\n",
+       "       3, 5, 4, 1, 3, 1, 1, 2, 3, 5, 5, 5, 1, 6, 3, 3, 1, 4, 1, 4, 3, 1,\n",
+       "       3, 4, 1, 1, 6, 3, 0, 1, 3, 3, 1, 5, 4, 5, 6, 3, 6, 3, 2, 6, 0, 3,\n",
+       "       3, 1, 5, 0, 3, 3, 3, 6, 4, 2, 6, 2, 1, 6, 3, 1, 6, 0, 3, 3, 1, 3,\n",
+       "       1, 4, 1, 3, 0, 1, 3, 6, 3, 3, 2, 3, 3, 1, 3, 0, 3, 4, 6, 1, 5, 1,\n",
+       "       5, 4, 1, 3, 2, 1, 3, 3, 6, 4, 6, 4, 3, 3, 3, 1, 6, 1, 4, 3, 1, 3,\n",
+       "       3, 4, 3, 6, 3, 3, 2, 0, 3, 5, 3, 2, 3, 4, 6, 3, 4, 5, 3, 3, 3, 3,\n",
+       "       3, 6, 3, 1, 3, 3, 6, 1, 4, 6, 6, 0, 3, 1, 3, 1, 1, 6, 3, 4, 1, 3,\n",
+       "       2, 6, 1, 0, 1, 1, 4, 3, 0, 0, 6, 1, 3, 3, 3, 2, 1, 1, 1, 1, 1, 4,\n",
+       "       3, 3, 1, 3, 1, 3, 3, 3, 4, 1, 4, 1, 3, 3, 6, 0, 3, 3, 3, 3, 3, 3,\n",
+       "       4, 4, 2, 5, 2, 2, 5, 3, 3, 2, 2, 5, 2, 3, 3, 4, 6, 4, 3, 1, 3, 4,\n",
+       "       3, 5, 3, 1, 2, 1, 3, 6, 3, 3, 3, 5, 3, 1, 3, 4, 3, 1, 1, 1, 3, 3,\n",
+       "       1, 3, 3, 3, 3, 1, 6, 3, 1, 3, 6, 6, 3, 2, 3, 4, 4, 2, 3, 3, 4, 3,\n",
+       "       1, 3, 3, 3, 1, 3, 6, 1, 1, 6, 1, 6, 3, 2, 6, 1, 6, 3, 2, 1],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 167,
-   "id": "5a01897d",
+   "id": "ebd73972",
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "0a921b05",
+   "id": "afa7f157",
    "metadata": {},
    "outputs": [
     {
@@ -1925,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "dfc0e52e",
+   "id": "3455d453",
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "e9b9197f",
+   "id": "68ddb2eb",
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +2058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba53bff2",
+   "id": "30c4f3bd",
    "metadata": {},
    "outputs": [],
    "source": []
